src/objects/Level_of_Care__c.object
<CustomObject>
    <fields>
        <fullName>Billed_Days__c</fullName>
        <label>Billed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billed_Dollars__c</fullName>
        <label>Billed Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Collected_from_Copays__c</fullName>
        <label>Cash Collected from Copays</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Collected_from_Deductibles__c</fullName>
        <label>Cash Collected from Deductibles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Collected_from_Private_Pays__c</fullName>
        <label>Cash Collected from Private Pays</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_Collected_from_Insurance__c</fullName>
        <label>Days Collected from Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dollars_Collected_from_Insurance__c</fullName>
        <label>Dollars Collected from Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Stay__c</fullName>
        <label>Facility Stay</label>
        <referenceTo>Facility_Stay__c</referenceTo>
        <relationshipLabel>Level of Care</relationshipLabel>
        <relationshipName>Level_of_Care</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Doctor__c</fullName>
        <label>Primary Doctor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Nurse__c</fullName>
        <label>Primary Nurse</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Therapist__c</fullName>
        <label>Primary Therapist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_UR__c</fullName>
        <label>Primary UR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Level of Care</label>
    <nameField>
        <label>Level of Care Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Level of Care</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>